Update dependencies, format, and hopefully support 1.20.6